--- a/src/component/calculator/calculator.css
+++ b/src/component/calculator/calculator.css
@@ -1,4 +1,4 @@
-.buttonClass {
+.ButtonClass {
   width: 20%;
   height: 30px;
   line-height: 30px;
@@ -10,7 +10,7 @@
   font-weight: 700;
 }
 
-.buttonsContainer {
+.ButtonsContainer {
   overflow: hidden;
   width: 100%;
   margin: 0 auto;
@@ -19,11 +19,11 @@
   justify-content: space-between;
 }
 
-.displayContainer {
+.DisplayContainer {
   padding-top: 1.75%;
 }
 
-.display {
+.Display {
   display: block;
   width: 95%;
   border: none;
@@ -36,7 +36,7 @@
   color: lightslategrey;
 }
 
-.calculatorContainer {
+.CalculatorContainer {
   width: 400px;
   margin: 0 auto;
   background: #cbced3;
@@ -44,7 +44,7 @@
   margin-top: 100px;
 }
 
-.calculatorName {
+.CalculatorName {
   color: #7c7e82;
   padding-top: 8px;
   font-weight: bold;
